# quizlaw

./: CLAUDE.md  README.md  deploy.sh  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  deploy.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth_routes.py  quiz_routes.py  user_routes.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/crud/: legal_section.py  mcq_question.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  legal_section.py  mcq_question.py  user.py
backend/app/schemas/: analytics.py  legal_section.py  mcq.py  token.py  user.py
backend/app/services/: analytics_service.py  learning_path_service.py  mcq_generator_service.py  openai_service.py  scraper_service.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 7cf2d35add5_add_fields_for_learning_paths_and_insights.py
backend/scripts/: enhanced_scraper.py  update_bar_relevance.py
frontend/: Dockerfile  Dockerfile.dev  deploy.sh  package.json  run-frontend.sh  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  QuizQuestion.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  QuizPage.tsx  QuizSetupPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
